--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,15 @@
     </repositories>
     <dependencies>
 
+        <!-- XT-Audio required. This is not on maven central. https://sjoerdvankreel.github.io/xt-audio/ -->
+        <dependency>
+            <groupId>com.xtaudio.xt</groupId>
+            <artifactId>xtaudio</artifactId>
+            <version>1.0.6</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/com.xt-audio.xt-1.0.6.jar</systemPath>
+        </dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
