Complete bulk of FrameProducer refactor

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
                 <configuration>
                     <source>15</source>
                     <target>15</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
