--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,8 +29,8 @@ jobs:
         body_path: CHANGELOG
         tag_name: v${{ env.VERSION }}
         files: |
-          target/osci-render-${{ env.VERSION }}.exe
-          target/osci-render-${{ env.VERSION }}.jar
+          target/lib/osci-render-${{ env.VERSION }}.exe
+          target/lib/osci-render-${{ env.VERSION }}.jar
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB_REPOSITORY: jameshball/osci-render
