--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     branches: [ release ]
 
 jobs:
-  release-windows:
+  build-windows:
 
     runs-on: windows-latest
 
@@ -23,14 +23,44 @@ jobs:
         $version= mvn help:evaluate -Dexpression="project.version" -q -DforceStdout
         echo "VERSION=$version" >> $env:GITHUB_ENV
         echo "Release version $version" > CHANGELOG
-    - name: Release
-      uses: softprops/action-gh-release@v1
+        mv target/lib/osci-render-${{ env.VERSION }}.jar target/lib/osci-render-win-${{ env.VERSION }}.jar
+    - name: Upload Windows binaries and jar
+      uses: actions/upload-artifact@v2
       with:
-        body_path: CHANGELOG
-        tag_name: v${{ env.VERSION }}
-        files: |
-          target/lib/osci-render-${{ env.VERSION }}.exe
-          target/lib/osci-render-${{ env.VERSION }}.jar
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GITHUB_REPOSITORY: jameshball/osci-render
+        name: windows
+        path: target/lib
+
+  build-debian:
+
+    runs-on: ubuntu-latest
+
+    needs: build-windows
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 16
+        uses: actions/setup-java@v2
+        with:
+          java-version: '16'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: |
+          mvn -B package
+          mvn -B jpackage:jpackage@debian
+          version=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
+          echo "VERSION=$version" >> $GITHUB_ENV
+          mv target/lib/osci-render-${{ env.VERSION }}.jar target/lib/osci-render-unix-${{ env.VERSION }}.jar
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v2
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ env.VERSION }}
+          files: |
+            windows/osci-render-${{ env.VERSION }}.exe
+            windows/osci-render-win-${{ env.VERSION }}.jar
+            target/lib/osci-render-${{ env.VERSION }}.deb
+            target/lib/osci-render-unix-${{ env.VERSION }}.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: jameshball/osci-render
+
