--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,3 +67,30 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: jameshball/osci-render
 
+  build-mac:
+
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 16
+        uses: actions/setup-java@v2
+        with:
+          java-version: '16'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: |
+          mvn -B package
+          version=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
+          echo "VERSION=$version" >> $GITHUB_ENV
+          mv target/lib/osci-render-$version.jar target/lib/osci-render-mac-$version.jar
+          ls target/lib/
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ env.VERSION }}
+          files: target/lib/osci-render-mac-${{ env.VERSION }}.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: jameshball/osci-render
+
