--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
 
                 <configuration>
                     <name>osci-render</name>
+                    <description>Program for making music by drawing objects on an oscilloscope using audio.</description>
                     <appVersion>${project.version}</appVersion>
                     <vendor>james.ball.sh</vendor>
                     <input>${project.build.directory}/lib</input>
@@ -108,6 +109,16 @@
                     </execution>
                     <execution>
                         <id>debian</id>
+                    </execution>
+                    <execution>
+                        <id>mac</id>
+                        <configuration>
+                            <type>dmg</type>
+                            <icon>src/main/resources/icons/icon.icns</icon>
+                            <macPackageName>osci-render</macPackageName>
+                            <macBundleIdentifier>OsciRender-${project.version}</macBundleIdentifier>
+                            <macBundleName>osci-render</macBundleName>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
