--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
                     <execution>
                         <id>mac</id>
                         <configuration>
+                            <type>PKG</type>
                             <icon>src/main/resources/icons/icon.icns</icon>
                             <macPackageName>osci-render</macPackageName>
                             <macBundleIdentifier>OsciRender-${project.version}</macBundleIdentifier>
