--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,11 @@
             <artifactId>java-data-front</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.aparapi</groupId>
+            <artifactId>aparapi</artifactId>
+            <version>3.0.0</version>
+        </dependency>
 
     </dependencies>
     <profiles>
